test/1.4/errors/T_EAMBINH.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// Declarations from an 'in each' override those of the extended template, but
// are overridden by declarations from the surrounding template
template sub { }
template t {
    in each sub {
        /// ERROR EAMBINH
        param x default 1;
    }
}

template t2 {
    port p {
        is sub;
        /// ERROR EAMBINH
        param x default 2;
    }
}

is t;
is t2;

// conflicting type declarations for the same parameter
template tp1 {
    param p : int;
}
template tp2 {
    param p : int;
}
/// ERROR EAMBINH
template tp3 is (tp1, tp2) {
    param p = 3;
}

template asm1 {
    shared method m();
}
template asm2 {
    shared method m();
}
template asm3 {
    shared method m();
}
/// ERROR EAMBINH
template asm4 is (asm1, asm2) {
    shared method m() {}
}
/// ERROR EAMBINH
template asm5 is (asm1, asm3) {
    shared method m() {}
}
